# nlohmann_json_serializer_example

./: CMakeLists.txt  main.cpp
src/: json_helper.h  main.cpp
